mobile menu statuses

--- a/lessons.html
+++ b/lessons.html
@@ -65,10 +65,12 @@
                     <li>
                         <a href="#" class="link-w-icon">
                             <div class="icon-container">
-                                <svg width="22" height="17" class="icon" viewBox="0 0 22 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="22" height="17" class="icon" viewBox="0 0 22 17" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
                                     <g>
                                         <rect width="22" height="17" fill="black" fill-opacity="0"/>
-                                        <path d="M17.7692 9.24375V13.5516C17.7692 15.8925 12.8708 17 10.1538 17C7.57138 17 2.53846 15.8168 2.53846 13.5516V8.20165L10.1538 12.3352L17.7692 9.24375ZM10.9298 0L0 4.8875L10.1538 10.4125L19.4615 6.65805V12.75H21.1538V5.7375L10.9298 0ZM22 17H18.6154C19.1045 16.15 19.4615 14.875 19.4615 13.6H21.1538C21.1538 14.8886 21.4847 16.0302 22 17Z" fill="#7C6F5A"/>
+                                        <path d="M17.7692 9.24375V13.5516C17.7692 15.8925 12.8708 17 10.1538 17C7.57138 17 2.53846 15.8168 2.53846 13.5516V8.20165L10.1538 12.3352L17.7692 9.24375ZM10.9298 0L0 4.8875L10.1538 10.4125L19.4615 6.65805V12.75H21.1538V5.7375L10.9298 0ZM22 17H18.6154C19.1045 16.15 19.4615 14.875 19.4615 13.6H21.1538C21.1538 14.8886 21.4847 16.0302 22 17Z"
+                                              fill="#7C6F5A"/>
                                     </g>
                                 </svg>
 
@@ -79,10 +81,12 @@
                     <li>
                         <a href="#" class="link-w-icon">
                             <div class="icon-container">
-                                <svg width="16" height="20" class="icon" viewBox="0 0 16 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <g >
+                                <svg width="16" height="20" class="icon" viewBox="0 0 16 20" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <g>
                                         <rect width="16" height="20" fill="black" fill-opacity="0"/>
-                                        <path d="M16 10.8333V0H0V20H6.7272C10.6128 20 9.3952 13.3333 9.3952 13.3333C11.8024 13.9542 16 13.6825 16 10.8333ZM12.8 5H3.2V4.16667H12.8V5ZM12.8 7.5H3.2V6.66667H12.8V7.5ZM12.8 10H3.2V9.16667H12.8V10ZM11.1272 15.1858C12.7648 15.5842 14.9712 14.9533 16 14.2033C14.8048 15.8683 11.816 18.96 10.0544 19.9375C10.9792 18.9642 11.3048 16.4092 11.1272 15.1858Z" fill="#7C6F5A"/>
+                                        <path d="M16 10.8333V0H0V20H6.7272C10.6128 20 9.3952 13.3333 9.3952 13.3333C11.8024 13.9542 16 13.6825 16 10.8333ZM12.8 5H3.2V4.16667H12.8V5ZM12.8 7.5H3.2V6.66667H12.8V7.5ZM12.8 10H3.2V9.16667H12.8V10ZM11.1272 15.1858C12.7648 15.5842 14.9712 14.9533 16 14.2033C14.8048 15.8683 11.816 18.96 10.0544 19.9375C10.9792 18.9642 11.3048 16.4092 11.1272 15.1858Z"
+                                              fill="#7C6F5A"/>
                                     </g>
                                 </svg>
 
@@ -93,10 +97,13 @@
                     <li>
                         <a href="#" class="link-w-icon">
                             <div class="icon-container">
-                                <svg width="22" height="24" class="icon" viewBox="0 0 22 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <g >
+                                <svg width="22" height="24" class="icon" viewBox="0 0 22 24" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <g>
                                         <rect width="22" height="24" fill="black" fill-opacity="0"/>
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M6.902 14C5.18 12.61 4 10.032 4 7.963C4 4.869 6.158 3.073 8.187 3.002C9.028 2.989 9.916 3.201 10.581 3.572C10.406 2.294 9.834 1.313 9.237 0.614L10.604 0C10.887 0.407 11.176 1.129 11.365 1.979C11.748 1.284 12.213 0.717 12.84 0.351C13.509 -0.04 14.618 -0.061 15.358 0.079C15.171 0.737 14.781 1.592 13.867 2.154C13.305 2.499 12.4 2.676 11.483 2.607C11.525 2.89 11.556 3.181 11.57 3.474C12.252 3.11 13.01 2.99 13.813 3.002C15.842 3.073 18 4.869 18 7.963C18 10.032 16.82 12.61 15.098 14H22V16H2.5C2.224 16 2 16.224 2 16.5C2 16.776 2.224 17 2.5 17H22V19H3.5C2.672 19 2 19.672 2 20.5C2 21.328 2.672 22 3.5 22H22V24H3.5C1.568 24 0 22.432 0 20.5C0 19.67 0.29 18.907 0.773 18.307C0.297 17.852 0 17.21 0 16.5C0 15.12 1.12 14 2.5 14H6.902ZM22 21H4V20H22V21ZM9.376 5.4C7.733 6.629 7.341 8.85 8.956 12C8.201 11.598 6.586 9.953 6.604 8.055C6.62 6.379 8.017 5.325 9.376 5.4Z" fill="#7C6F5A"/>
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                              d="M6.902 14C5.18 12.61 4 10.032 4 7.963C4 4.869 6.158 3.073 8.187 3.002C9.028 2.989 9.916 3.201 10.581 3.572C10.406 2.294 9.834 1.313 9.237 0.614L10.604 0C10.887 0.407 11.176 1.129 11.365 1.979C11.748 1.284 12.213 0.717 12.84 0.351C13.509 -0.04 14.618 -0.061 15.358 0.079C15.171 0.737 14.781 1.592 13.867 2.154C13.305 2.499 12.4 2.676 11.483 2.607C11.525 2.89 11.556 3.181 11.57 3.474C12.252 3.11 13.01 2.99 13.813 3.002C15.842 3.073 18 4.869 18 7.963C18 10.032 16.82 12.61 15.098 14H22V16H2.5C2.224 16 2 16.224 2 16.5C2 16.776 2.224 17 2.5 17H22V19H3.5C2.672 19 2 19.672 2 20.5C2 21.328 2.672 22 3.5 22H22V24H3.5C1.568 24 0 22.432 0 20.5C0 19.67 0.29 18.907 0.773 18.307C0.297 17.852 0 17.21 0 16.5C0 15.12 1.12 14 2.5 14H6.902ZM22 21H4V20H22V21ZM9.376 5.4C7.733 6.629 7.341 8.85 8.956 12C8.201 11.598 6.586 9.953 6.604 8.055C6.62 6.379 8.017 5.325 9.376 5.4Z"
+                                              fill="#7C6F5A"/>
                                     </g>
                                 </svg>
 
@@ -107,10 +114,12 @@
                     <li>
                         <a href="#" class="link-w-icon ">
                             <div class="icon-container">
-                                <svg width="24" height="17" class="icon"  viewBox="0 0 24 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="24" height="17" class="icon" viewBox="0 0 24 17" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
                                     <g>
                                         <rect width="24" height="17" fill="black" fill-opacity="0"/>
-                                        <path d="M10.8377 12.818C13.2943 12.2553 14.7283 11.7632 13.62 9.6883C10.2497 3.37535 12.7269 0 16.2866 0C19.9166 0 22.3329 3.5054 18.9523 9.6883C17.8106 11.7751 19.3269 12.2672 21.7311 12.818C23.8594 13.3059 24 14.337 24 16.1236V17H8.57143C8.57143 14.6668 8.38286 13.3807 10.8377 12.818ZM0 17H6.69343C6.66343 10.0496 9.63857 12.484 9.63857 7.54205C9.63857 5.4077 8.23371 4.25 6.426 4.25C3.756 4.25 1.89857 6.78215 4.42629 11.5167C5.25686 13.0722 3.54257 13.4419 1.69971 13.8635C0.103714 14.229 0 15.0025 0 16.3429V17Z" fill="#7C6F5A"/>
+                                        <path d="M10.8377 12.818C13.2943 12.2553 14.7283 11.7632 13.62 9.6883C10.2497 3.37535 12.7269 0 16.2866 0C19.9166 0 22.3329 3.5054 18.9523 9.6883C17.8106 11.7751 19.3269 12.2672 21.7311 12.818C23.8594 13.3059 24 14.337 24 16.1236V17H8.57143C8.57143 14.6668 8.38286 13.3807 10.8377 12.818ZM0 17H6.69343C6.66343 10.0496 9.63857 12.484 9.63857 7.54205C9.63857 5.4077 8.23371 4.25 6.426 4.25C3.756 4.25 1.89857 6.78215 4.42629 11.5167C5.25686 13.0722 3.54257 13.4419 1.69971 13.8635C0.103714 14.229 0 15.0025 0 16.3429V17Z"
+                                              fill="#7C6F5A"/>
                                     </g>
                                 </svg>
 
@@ -124,7 +133,7 @@
                     <p class="title">Мои мастер-группы</p>
                     <ul>
                         <li>
-                            <a href="#">
+                            <a href="#" class="active">
                                 <span class="name">Информатика</span>
                                 <span class="author">Виктория Ланская</span>
                             </a>
