--- a/teacher-personal-page.html
+++ b/teacher-personal-page.html
@@ -66,7 +66,7 @@
                         <a href="#" class="link-w-icon">
                             <div class="icon-container">
                                 <svg width="22" height="17" class="icon" viewBox="0 0 22 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <g>
+                                    <g >
                                         <rect width="22" height="17" fill="black" fill-opacity="0"/>
                                         <path d="M17.7692 9.24375V13.5516C17.7692 15.8925 12.8708 17 10.1538 17C7.57138 17 2.53846 15.8168 2.53846 13.5516V8.20165L10.1538 12.3352L17.7692 9.24375ZM10.9298 0L0 4.8875L10.1538 10.4125L19.4615 6.65805V12.75H21.1538V5.7375L10.9298 0ZM22 17H18.6154C19.1045 16.15 19.4615 14.875 19.4615 13.6H21.1538C21.1538 14.8886 21.4847 16.0302 22 17Z" fill="#7C6F5A"/>
                                     </g>
@@ -105,7 +105,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="link-w-icon ">
+                        <a href="#" class="link-w-icon active">
                             <div class="icon-container">
                                 <svg width="24" height="17" class="icon"  viewBox="0 0 24 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <g>
@@ -119,7 +119,6 @@
                         </a>
                     </li>
                 </ul>
-
                 <div class="left-menu-masterClasses">
                     <p class="title">Мои мастер-группы</p>
                     <ul>
@@ -153,6 +152,7 @@
                     </ul>
                 </div>
             </div>
+
 
         </div>
     </div>
