--- a/lessons.html
+++ b/lessons.html
@@ -303,7 +303,7 @@
 </span><span class="time">17:30</span><span class="secondary">МСК</span></span>
                                 </div>
                                 <div class="btn-container d-none d-lg-block">
-                                    <button class="button btn-orange">Изучить</button>
+                                    <button class="button btn-orange">Посмотреть</button>
                                 </div>
                                 <div class="description">
                                     <p>Взаимодействие генов — это совместное действие нескольких генов, в результате
@@ -311,7 +311,7 @@
                                 </div>
 
                                 <div class="btn-container d-lg-none">
-                                    <button class="button btn-orange">Изучить</button>
+                                    <button class="button btn-orange">Посмотреть</button>
                                 </div>
 
                             </div>
@@ -337,7 +337,7 @@
                                     <span class="red-label">урок перенесён</span>
                                 </div>
                                 <div class="btn-container d-none d-lg-bloc">
-                                    <button class="button btn-orange">Изучить</button>
+                                    <button class="button btn-orange">Посмотреть</button>
                                 </div>
                                 <div class="description">
                                     <p>Взаимодействие генов — это совместное действие нескольких генов, в результате
@@ -345,7 +345,7 @@
                                 </div>
 
                                 <div class="btn-container d-lg-none">
-                                    <button class="button btn-orange">Изучить</button>
+                                    <button class="button btn-orange">Посмотреть</button>
                                 </div>
 
                             </div>
@@ -370,7 +370,7 @@
 </span><span class="time">17:30</span><span class="secondary">МСК</span></span>
                                 </div>
                                 <div class="btn-container d-none d-lg-bloc">
-                                    <button class="button btn-orange">Изучить</button>
+                                    <button class="button btn-orange">Посмотреть</button>
                                 </div>
                                 <div class="description">
                                     <p>Взаимодействие генов — это совместное действие нескольких генов, в результате
@@ -378,7 +378,7 @@
                                 </div>
 
                                 <div class="btn-container d-lg-none">
-                                    <button class="button btn-orange">Изучить</button>
+                                    <button class="button btn-orange">Посмотреть</button>
                                 </div>
                                 <div class="hw-status">
                                     <a href="#"><span class="icon"><svg width="18" height="14" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -409,14 +409,14 @@
 </span><span class="time">17:30</span><span class="secondary">МСК</span></span>
                                 </div>
                                 <div class="btn-container d-none d-lg-bloc">
-                                    <button class="button btn-orange">Изучить</button>
+                                    <button class="button btn-orange">Посмотреть</button>
                                 </div>
                                 <div class="description">
                                     <p>Обычно половые хромосомы обозначают в генетических записях буквами X и Y. В этих хромосомах содержатся гены, определяющие синтез белков, которые регул...</p>
                                 </div>
 
                                 <div class="btn-container d-lg-none">
-                                    <button class="button btn-orange">Изучить</button>
+                                    <button class="button btn-orange">Посмотреть</button>
                                 </div>
                                 <div class="hw-status">
                                     <a href="#"><span class="icon"><svg width="18" height="14" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -447,14 +447,14 @@
 </span><span class="time">17:30</span><span class="secondary">МСК</span></span>
                                 </div>
                                 <div class="btn-container d-none d-lg-block">
-                                    <button class="button btn-orange">Изучить</button>
+                                    <button class="button btn-orange">Посмотреть</button>
                                 </div>
                                 <div class="description">
                                     <p>К физическим факторам относят ионизирующее излучение, ультрафиолетовое излучение, повышенную температуру. Под их воздействием происходит повреждение м...</p>
                                 </div>
 
                                 <div class="btn-container d-lg-none">
-                                    <button class="button btn-orange">Изучить</button>
+                                    <button class="button btn-orange">Посмотреть</button>
                                 </div>
                                 <div class="hw-status">
                                     <a href="#"><span class="icon"><svg width="18" height="14" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
