--- a/change-password.html
+++ b/change-password.html
@@ -160,7 +160,7 @@
 <section class="content-section">
     <div class="container">
         <div class="row">
-            <div class="col-lg-3 d-none d-lg-block">
+            <div class="col-lg-3 pr-0 d-none d-lg-block">
                 <div class="left-menu-container">
                     <ul class="navigation">
                         <li>
