--- a/teacher.html
+++ b/teacher.html
@@ -171,7 +171,7 @@
 <section class="content-section">
     <div class="container">
         <div class="row">
-            <div class="col-lg-3 d-none d-lg-block">
+            <div class="col-lg-3 d-none pr-lg-0 d-lg-block">
                 <div class="left-menu-container">
                     <ul class="navigation">
                         <li>
