--- a/lk.html
+++ b/lk.html
@@ -260,8 +260,8 @@
                 <div class="content-container">
                     <div class="content">
                         <div class="controls-row">
-                            <button class="button btn-orange">Добавить мастер группу</button>
-                            <button class="button btn-orange-outline">Добавить курс</button>
+                            <button class="button btn-orange mb-0">Добавить мастер группу</button>
+                            <button class="button btn-orange-outline mb-0">Добавить курс</button>
                         </div>
                         <div class="masters-groups">
                             <h1>Мои мастер-группы</h1>
