lk fixes mobile

--- a/lk.html
+++ b/lk.html
@@ -260,7 +260,7 @@
                 <div class="content-container">
                     <div class="content">
                         <div class="controls-row">
-                            <button class="button btn-orange mb-0">Добавить мастер группу</button>
+                            <button class="button btn-orange mb-lg-0">Добавить мастер группу</button>
                             <button class="button btn-orange-outline mb-0">Добавить курс</button>
                         </div>
                         <div class="masters-groups">
@@ -372,13 +372,13 @@
                                         <span class="date">23.05.2019</span>
                                     </div>
                                 </div>
-                                <div class="homework-item__grad">
+                                <div class="homework-item__grad checking">
                                     <span class="checking">Проверяется...</span>
                                 </div>
                             </div>
                             <div class="homework-item">
                                 <div class="homework-item__text">
-                                    <h2>Урок 12. Взаимодействие неаллельных генов</h2>
+                                    <h2>Урок 14. Генетика пола</h2>
                                     <div class="info">
                                         <span class="icon"><svg width="16" height="16" viewBox="0 0 16 16" fill="none"
                                                                 xmlns="http://www.w3.org/2000/svg">
