added check variants to create lesson

--- a/create-lesson.html
+++ b/create-lesson.html
@@ -275,7 +275,29 @@
                                 </div>
                             </div>
                             <button class="button btn-orange-outline border-0 add-tip">Добавить подсказку</button>
+                            <div class="varitans-check py-3">
+                                <div class="varitans-check__title">
+                                    Правильный вариант:
+                                </div>
+                                <div class="custom-radio">
+                                    <input type="radio" id="var1" name="vars">
+                                    <label for="var1">1</label>
+                                </div>
+                                <div class="custom-radio">
+                                    <input type="radio" id="var2" name="vars">
+                                    <label for="var2">2</label>
+                                </div>
+                                <div class="custom-radio">
+                                    <input type="radio" id="var3" name="vars">
+                                    <label for="var3">3</label>
+                                </div>
+                                <div class="custom-radio">
+                                    <input type="radio" id="var4" name="vars">
+                                    <label for="var4">4</label>
+                                </div>
+                                <button class="button btn-orange px-2 border-0 add-tip">Добавить вариант</button>
 
+                            </div>
                             <div class="controls-row mt-3 mb-3">
                                 <button class="button btn-orange">Сохранить</button>
                                 <button class="button btn-orange-outline" data-toggle="modal" data-target="#addTask">Добавить ещё задание</button>
